# TFM-allucination

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  app.py  app_v2.py  check_gpu.py  docker-compose.local.yml  docker-compose.yml  ejecution.md  plan_hitos_chatbot_llm_rag_metricas.md  pyproject.toml  requirements.txt  test_ui_eval.py
.agent/rules/: rules.md
corpus/: articulos_fitosanitarios_busqueda.csv  articulos_fitosanitarios_final.csv  curated_arxiv_ids.json  fetch_phytosanitary_articles.py  fetch_phytosanitary_batch2.py  registry.yaml
docs/: ARQUITECTURA_Y_COMPARATIVA.md  ARQUITECTURA_Y_MANUAL.md  COMPARATIVA_Modelos.md  Documentation.md  METRICAS_IMPLEMENTADAS.md  PLAN_HITOS_TFM.md  matriz_experimentos.md  protocolo_experimental.md
eval/: question_bank_v1.csv  run_eval.py  run_eval_v2.py  run_factscore.py  run_matrix_eval.py  run_metrics.py  stat_engine.py  statistical_analysis.py  statistical_methodology.md
reports/: final_integrated_report.md  generate_report.py  reporte_tfm_all_20260124_223754.md  v0_vs_v1.md  v0_vs_v1_comparative.md
scripts/: acquire_corpus.py  build_vector_matrix.py  check_count.py  debug_gemini.py  debug_gemini_new_sdk.py  preprocess_corpus.py  setup_and_ingest.py  sync_model_registry.py  test_agent_v2.py  verify_ingestion.py
tests/: compare_models_pulgones.py  debug_pdf_content.py  debug_pdf_out.txt  telenomus_results.txt  test_agent_v2.py  test_debug_gemini.py  test_debug_gemini_new_sdk.py  test_docling_images.py  test_embeding_cleanup.py  test_embeding_nan.py  test_format_json.py  test_integrated_pipeline.py  test_new_metrics.py  test_providers_smoke.py  test_telenomus_retrieval.py  test_ui_eval.py  test_utils.py  test_vector_matrix_health.py  test_verify_ingestion.py  test_vlm_injector.py
(+115 files in other folders)
