[project]
name = "tfm-allucination"
version = "0.1.0"
description = "Chatbot con RAG y Métricas de Alucinación (TFM)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-google-genai",
    "langchain-openai",
    "langchain-qdrant",
    "python-dotenv",
    "pydantic-settings",
    "pydantic",
    "streamlit",
    "qdrant-client",
    "httpx",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
    "docx2txt>=0.9",
    "pypdf>=6.6.0",
    "langchain-ollama>=0.3.10",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
    "pymupdf>=1.26.5",
    "langgraph>=0.6.11",
    "rq>=2.6.1",
    "redis>=7.0.1",
    "tenacity>=8.2.0",
    "docling>=2.69.1",
    "faiss-cpu>=1.13.0",
    "ragas>=0.4.3",
    "plotly>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

